# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: README.md  pyci.yml
hexlet_code.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
page_analyzer/: __init__.py  app.py  checker.py  normalizer.py  repository.py  validator.py
page_analyzer/templates/: index.html  url_info.html  urls.html
