[project]
name = "hexlet-code"
version = "0.1.0"
description = "Page Analyzer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "flask>=2.3.0",
    "gunicorn",
    "psycopg>=3.2.12",
    "psycopg-binary>=3.2.12",
    "psycopg2-binary==2.9.11",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "validators>=0.35.0",
]

[project.scripts]
page-analyzer = "page_analyzer.app:app"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.4",
]

[tool.ruff]
line-length = 120
target-version = "py313"  # Поднял до версии вашего Python

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP",
]
ignore = [
    "D", "ANN", "A002", "S201",
]

[tool.uv]
package = true